--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,13 @@
 
 # Java class files
 *.class
+.DS_Store
 
 # Generated files
 bin/
 gen/
 out/
+README.md
 
 # Gradle files
 .gradle/
@@ -35,6 +37,7 @@ captures/
 
 # IntelliJ
 *.iml
+.idea/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
