--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 # Files for the ART/Dalvik VM
 *.dex
+app.iml
 
 # Java class files
 *.class
@@ -18,7 +19,7 @@ README.md
 
 # Gradle files
 .gradle/
-build/
+/build
 
 # Local configuration file (sdk path, etc)
 local.properties
