--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,14 +26,14 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
+            android:label="Log In" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_welcome"
+            android:label="Locations"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".RegisterActivity"
-            android:label="@string/title_activity_register" />
+            android:label="Sign Up" />
         <activity
             android:name=".LocationDetailsActivity"
             android:label="Details"
